RESOLVED FIXED35588
[V8] NPN_GetProperty shouldn't crash if the property doesn't exist
https://bugs.webkit.org/show_bug.cgi?id=35588
Summary [V8] NPN_GetProperty shouldn't crash if the property doesn't exist
Nate Chapin
Reported 2010-03-02 10:40:02 PST
Currently, if the property doesn't exist, v8::Object::Get() returns an empty handle and we fail an ASSERT when we try to convert that handle to an NPVariant, so we should exit early before trying to convert.
Attachments
patch (1.30 KB, patch)
2010-03-02 10:43 PST, Nate Chapin
dglazkov: review+
Nate Chapin
Comment 1 2010-03-02 10:43:01 PST
Dimitri Glazkov (Google)
Comment 2 2010-03-02 11:07:07 PST
Comment on attachment 49818 [details] patch ok.
Alexey Proskuryakov
Comment 3 2010-03-02 17:11:50 PST
Note You need to log in before you can comment on or make changes to this bug.